# yolorun

./: .gitignore  Dockerfile  Dockerfile.trt  Dockerfile.ultralitycs  README.md  Taskfile.yml  docker-compose.yml  env.sample  opencv-build.sh  pyproject.toml  yolorun.code-workspace
jupyter/: nms.ipynb
jupyter/.ipynb_checkpoints/: nms-checkpoint.ipynb  nms-test-checkpoint.py
opencv-python/: README.md  pyproject.toml
yolorun/: config.py  grabber.py  main.py  settings.py  yolo2ls.py
yolorun/experiments/TensorRT-For-YOLO-Series/utils/: utils.py
yolorun/lib/: aioudp.py  bboxes.py  grabber.py  timing.py  yoloseg_gorordo.py
yolorun/models/: __init__.py  darknet.py  dnn.py  onnx.py  onnx_dnn.py  ultralytics.py  yoloseg_gorordo.py
yolorun/models/triplemu/: onnx2engine.py  pt2onnx.py  segmentation.py
yolorun/models/trt/: detection.py  export.py  export_seg.py  pycuda.py  segmentation.py
yolorun/yolov8/: __init__.py  export_det.py  export_seg.py  infer_det.py  infer_seg.py
