
[project]
name = "yolorun"
version = "0.1.4"
description = ""
authors = [
    {name = "Stefano Scipioni", email = "stefano.scipioni@csgalileo.net"},
]
dependencies = [
    "configargparse>=1.5.3",
    "numpy>=1.25.2",
    "imagesize>=1.4.1",
    "shared-ndarray2>=1.0.0.post0",
    "opencv-python>=4.8.0.76",
]

requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
yolorun = "yolorun.main:main"
yolo2ls = "yolorun.yolo2ls:main"
#yolo2onnx = "yolorun.yolo2onnx:main"
export-det = "yolorun.models.trt.export:run"
export-seg = "yolorun.yolov8.export_seg:main"
#infer-det = "yolorun.yolov8.infer_det:run"
#infer-seg = "yolorun.yolov8.infer_seg:run"

[project.optional-dependencies]
train = [
    "ultralytics>=8.0.184",
    "onnx>=1.14.1",
    "onnxsim>=0.4.33",
    "onnxruntime>=1.16.0",
]
onnx = [
    "onnxruntime-gpu>=1.16.0",
]
