
[project]
name = "yolorun"
version = "0.1.4"
description = ""
authors = [
    {name = "Stefano Scipioni", email = "stefano.scipioni@csgalileo.net"},
]
dependencies = [
    #"opencv-python>=4.8.0.76",
    "imagesize>=1.4.1",
    "configargparse>=1.7",
    "shared-ndarray2>=1.0.0.post0",
    "onnx>=1.15.0",
]

requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
yolorun = "yolorun.main:main"
yolo2ls = "yolorun.yolo2ls:main"
### new yolov8 tensorrt
export-det = "yolorun.models.trt.export:run"
export-seg-yogordo = "yolorun.models.trt.export_seg:run"
pt2onnx = "yolorun.models.triplemu.pt2onnx:run"
onnx2engine = "yolorun.models.triplemu.onnx2engine:run"
### old yolov8 tensorrt
#export-seg = "yolorun.yolov8.export_seg:main"
#infer-det = "yolorun.yolov8.infer_det:run"
#infer-seg = "yolorun.yolov8.infer_seg:run"

[project.optional-dependencies]
train = [
    #"ultralytics>=8.0.184",
    #"onnx>=1.14.1",
    #"onnxsim>=0.4.33",
    #"onnxruntime>=1.16.0",
    "ultralytics>=8.0.184",
    "onnxsim>=0.4.33",
    "onnxruntime-gpu>=1.16.0",
    "opencv-python>=4.8.0.76",
]
onnx = [
    #"onnxruntime-gpu>=1.16.0",
]
